objects/childxyz__c.object
<CustomObject>
    <fields>
        <fullName>parent_link_optional__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>parentabc</label>
        <referenceTo>parentabc__c</referenceTo>
        <relationshipLabel>childxyzs</relationshipLabel>
        <relationshipName>parent_link_optional</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>test_link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>childxyzs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tester__c</fullName>
        <label>tester</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>childxyz</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>childxyz Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>childxyzs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>